<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- App -->
    <string name="app_name">Native Clipboard</string>
     <string name="xposed_desc">Adds system wide clip manager</string>
    
    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>

    <!-- Preferences -->
    <string name="category_theme">Theme</string>
    <string name="bgcolor">Background Color</string>
    <string name="clpcolor">Clip Color</string>
    <string name="clpcolor_summary">The text background</string>
    <string name="pinnedcolor">Pinned Clip Color</string>
    <string name="txtcolor">Text Color</string>
    <string name="category_sizes">Sizes</string>
    <string name="history_summary">Choose the number of items to keep in the history(Pinned don\'t count)</string>
    <string name="history_title">History Size</string>
    <string name="txtsize">Text Size</string>
    <string name="uisize">ClipBoard Size</string>
    <string name="blacklist">Blacklist</string>
    <string name="blacklist_help">Choose which apps should not be copied from (ex. Password managers).</string>
    <string name="add">Add</string>
    <string name="unknown">Unknown</string>
    <string name="help">Help</string>
    <string name="xda">XDA Thread</string>
    <string name="category_advanced">Advanced</string>
    <string name="pastefunction">Switch paste functionality</string>
    <string name="pastefunction_summary_off">Single Click : Pastes\nLong Click : Opens ClipBoard\n*Requires Reboot</string>
    <string name="pastefunction_summary_on">Single Click : Opens ClipBoard\nLong Click : Pastes\n*Requires Reboot</string>
    <string name="cbbutton">Add CB button</string>
    <string name="cbbutton_summary">Add CB button to selection menu\n*Requires Reboot</string>
    <string name="singlepaste">Single paste</string>
    <string name="singlepaste_summary">Close the clipboard directly after pasting</string>
    <string name="req_reboot">*Requires Reboot</string>
    <string name="monitorservice">Compatibility mode</string>
    <string name="monitorservice_summary">Use a background service to monitor copied text for MIUI and Samsung Roms\n*disables Blacklisting</string>
    <string name="notification_title">Show Notification</string>
    <string name="notification_summary">This might be needed to keep the service running (especially on low RAM devices)</string>
    <string name="sort">Sort Clips</string>
    <string name="newfirst">Newest first</string>
	<string name="pinnedfirst">Pinned first</string>
	<string name="pinnedlast">Pinned last</string>
	<string name="usedefault">Use Default</string>
	<string name="about">About</string>
	<string name="both_enabled">You have both Xposed and Accessibility enabled</string>
    <string name="disable_one">Please disable one of them</string>
    <string name="xposed">Xposed</string>
    <string name="accessibility">Accessibility</string>
    <string name="compatibility_user">You are using Compatibility mode</string>
    <string name="compatibility_user_desc">Switch to using the Accessibility, it uses less RAM and does NOT need the Notification</string>
    <string name="enable_accessibility">Enable Accessibility</string>
    <string name="both_available">You can use this app by either Xposed or Accessibility</string>
    <string name="path_both">(Xposed Installer>Modules>Native Clip Board)\n(Settings>Accessibility>Native Clip Board)</string>
    <string name="path_access">(Settings>Accessibility>Native Clip Board)</string>
    <string name="path_xposed">(Xposed Installer>Modules>Native Clip Board)</string>
    <string name="xposed_available">You need to enable the module through the Xposed Installer</string>
    <string name="goto_xposed">Go to Xposed Installer</string>
    <string name="accessibility_available">This app requires Accessibility to be turned on</string>
    <string name="goto_accessibility">Go to Settings</string>
    <string name="compat_conflict">Doesn\'t work with Compatibility mode</string>
    <string name="columncount">Number of Columns</string>
    <string name="columncount_summary">Use 0 for auto fit</string>
    <string name="altrcombos">Alternative combos</string>
    <string name="altrcombos_summary">alternative ways to open the clipboard</string>
    <string name="double_tap">Double Tap</string>
    <string name="tap_longtap">Tap + Long Tap</string>
    <string name="triple_tap">Triple Tap</string>
    <string name="chromepref">Chrome (beta)</string>
    <string name="save_collections">Save current collection</string>
    <string name="theme_collections">Theme Collections :</string>
    <string name="theme_collections_summary">Click to apply\nLong click to delete</string>
    <string name="active_theme">Applied Collections :</string>
    <string name="windowsize_summary">Use the line to match the height of the clipboard to the height of the keyboard</string>
    <string name="doesnt_work">Unfortunately this app requires Xposed, or Jelly Bean 4.3 and above</string>

    <!-- Clip Board -->
    <string name="clear_all">Clear all</string>
    <string name="clear_all_conf">Clear all clips ?</string>
    <string name="title_hint">Set a Title for Clip</string>
    <string name="clip_text_hint">Clip Text</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="shrink">Shrink</string>
    <string name="share">Share</string>

     <!-- Toast Messages -->
    <string name="undo">Undo</string>
    <string name="deleted">Deleted: </string>
    <string name="enable_xposed_toast">Check Native Clip Board then reboot</string>
    <string name="disable_xposed_toast">Un-Check Native Clip Board then reboot</string>
    <string name="enable_access_toast">Click on Native Clip Board then turn On</string>
    <string name="disable_access_toast">Click on Native Clip Board then turn Off</string>
    <string name="req_xposed">Requires Xposed</string>


    <string name="access_decs">This is used to detect the double tap and monitor the clipboard\n\n-\'Observe your actions\': to be notified of the double tap.\n-\'Retrieve window content\': to retrieve the double tapped text field.\n-\'Observe text you type\': Only Home,Recent, and back are observed.</string>
    <string name="chrome_warning">Due to limitations in Chrome when pasting a clip <![CDATA[<b>all</b>]]> previous text in the field will be <![CDATA[<b>replaced</b>]]> </string>


    <string name="clipboard">Clipboard</string>
    <string name="name_hint">Theme collection name</string>


    <string name="intro_welcome">Welcome to Native clipboard</string>
    <string name="intro_desc">Native clipboard provides seamless access to any text you\'ve copied without leaving your current app</string>
    <string name="intro_try_it">Try it out</string>
    <string name="intro_here">" Here"</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="backup_location">Backup location</string>
    <string name="category_backup">Backup &amp; Restore</string>

    <string name="intro_xposed_test">Select this or long click on \'PASTE\'</string>
    <string name="intro_xposed_test_m">Select this</string>
    <string name="intro_combo_hint">\nThis can be later changed under Advanced</string>
    <string name="intro_xposed_enable">Enable the module from the Xposed Installer, reboot. Then come back to continue the tutorial</string>
    <string name="intro_compare">Comparison</string>
    <string name="intro_both_avl">Each has it\'s advantages and disadvantages click on the button below to visit XDA forum to see the comparison</string>
    <string name="smart_position">Smart clipboard position</string>
    <string name="smart_position_summary">Position the clipboard on the opposite side of the screen, so that the text field is not covered</string>

    <string name="tutorial">Tutorial</string>
    <string name="support">Support</string>
    <string name="switchingkeyboard1">You can switch keyboard by using one of three ways:</string>
    <string name="switchingkeyboard2">
        1-Using the option in the notification panel
        \n2-Using the bottom in the Navigation, in bottom right corner of the screen
        \n3-If you are using Google Keyboard use the globe switch</string>
    <string name="enable_keyboard">Enable Keyboard</string>
    <string name="enable_keyboard_desc">Go to the settings and enable one of the two keyboards and then click back</string>
    <string name="diff_explanation">-Integrated:\n  Behaves like an additional language to Google Keyboard \n(Not recommended if you have more than one language)\n\n-Independent:\n  Behaves like a separate keyboard \nUse this if you don't use Google Keyboard or don't want to pass my keyboard each time you change the language in Google keyboard</string>
    <string name="explain_button">Explain Difference</string>
    <string name="keyboard_help">Help me choose</string>
    <string name="keyboard_q2">Do you have more then one keyboard language?</string>
    <string name="keyboard_q3">Do you mind passing the clipboard each time you need to switch language ?</string>
    <string name="keyboard_q1">Which keyboard do you use ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="toast_integrated">Use Integrated</string>
    <string name="toast_independent">Use Independent</string>
    <string name="chromepref_summary">Use Keyboard option\nIn Advanced</string>
    <string name="compat_key">Compatibility keyboard</string>
    <string name="compat_key_summary">Use a keyboard to access copied text, in apps where double tap doesn\'t work</string>
    <string name="key_monitor">Hardware keys monitoring</string>
    <string name="key_monitor_summary">Monitor Back and Home to close the clipboard when clicked\nXiaomi users turn this off for one handed mode to work</string>
    <string name="keyboard_intro_title">Keyboard</string>
    <string name="keyboard_intro_desc">Use a keyboard filled with your copied texts for apps where the clipboard does not open.\nFor example: Office apps, Web browsers</string>

</resources>
